# lit

./: CMakeLists.txt  branch.cpp  branch.hpp  clang-format  commit.cpp  constants.hpp  exec.cpp  file_utils.cpp  file_utils.hpp  lit.cpp  readme.md
src/: branch.cpp  checkout.cpp  commit.cpp  commit_graph.cpp  exec.cpp  file_utils.cpp  lit.cpp
src/headers/: branch.hpp  checkout.hpp  commit.hpp  commit_graph.hpp  constants.hpp  exec.hpp  file_utils.hpp
src/test/: checkout-test  dir-test  graph-test  graph-tests  merge-conflict-test  merge-no-conflict-test  merge-test
